Fixed overflow issue in Home page &Added  Responsiveness to AuthUI/Search Bar/minor adjustment to footer for width:375px

--- a/client/src/style/Footer.css
+++ b/client/src/style/Footer.css
@@ -35,3 +35,10 @@ footer {
     text-decoration: none;
     margin-top: 5px;
 }
+
+@media (width: 375px) {
+
+    .footer-title{
+    font-size: 12px;
+  }
+}
